--- a/frontend_react/src/container/Work/Work.scss
+++ b/frontend_react/src/container/Work/Work.scss
@@ -10,6 +10,7 @@
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
+
   margin: 4rem 0 2rem;
 
   .app__work-filter-item {
@@ -17,7 +18,8 @@
     border-radius: 0.5rem;
     background-color: #fff;
     color: #000;
-    font-weight: 100;
+    font-weight: 800;
+
     cursor: pointer;
     transition: all 0.3s ease;
     margin: 0.5rem;
@@ -48,11 +50,13 @@
   .app__work-item {
     width: 270px;
     flex-direction: column;
+
     margin: 2rem;
     padding: 1rem;
     border-radius: 0.5rem;
     background-color: #fff;
     color: #000;
+
     cursor: pointer;
     transition: all 0.3s ease;
 
@@ -76,6 +80,7 @@
 .app__work-img {
   width: 100%;
   height: 230px;
+
   position: relative;
 
   img {
@@ -99,6 +104,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+
   border-radius: 0.5rem;
   opacity: 0;
   transition: all 0.3s ease;
@@ -109,6 +115,7 @@
     border-radius: 50%;
     background-color: rgba(0, 0, 0, 0.5);
     color: #fff;
+
     margin: 1rem;
     font-family: var(--font-base);
     font-weight: 800;
@@ -129,16 +136,21 @@
   position: relative;
   flex-direction: column;
 
-  h1 {
+  h4 {
     margin-top: 1rem;
     line-height: 1.5;
+
+    @media screen and (min-width: 2000px) {
+      margin-top: 3rem;
+    }
   }
 
   .app__work-tag {
     position: absolute;
+
     padding: 0.5rem 1rem;
     border-radius: 10px;
-    background-color: rgb(255, 255, 255);
+    background-color: #fff;
     top: -25px;
   }
 }
