--- a/frontend_react/src/container/Testimonial/Testimonial.scss
+++ b/frontend_react/src/container/Testimonial/Testimonial.scss
@@ -46,6 +46,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
+  margin-top: 1.5rem;
 
   p {
     font-size: 1.25rem;
